static/less/results.less
header.results-label h3 {
  margin: 0px;
}

.results {
  header {
    border-top: 1px solid @gray3;
    border-bottom: 1px solid @gray3;
    background-color: @white;
    height: 48px;

    nav > li {
      display: block;
      float: left;
      border-bottom: @searchBorderWidth solid transparent;
      padding: 15px 10px 10px;
      margin: 0 9px;
      color: @gray5;

      font-family: nimbussannov-med, arial, sans-serif;
      font-weight: normal;
      font-size: 15px;
      a {
        text-decoration: none;
        color: @gray5;
        &:hover {
          color: @black;
        }
        &.dropdown-toggle {
          padding: 4px 2px 0;
          display: inline-block;
          height: 9px;
        }
      }
      &:hover {
        border-bottom: @searchBorder;
        > a {
          color: @black;
        }
      }
      &.selected {
        border-bottom: @searchBorder;
        > a {
          color: @black;

          &:hover {
            cursor: default;
          }
        }
      }
      &.disabled {
        color: @gray6;
        border-bottom-color: transparent;
        .selector {
          display: none;
        }
      }
      &.disabled.selected {
        border-bottom: @searchBorder;
      }
      &.download {
        float: right;
        padding: 9px 0 0;
        margin: 0 10px;
        &:hover {
          border-bottom: 0;
        }
      }
      .selector {
        display: inline-block;
        height: 13px;
        vertical-align: middle;

        .caret {
          margin-top: 0;
          border-top-color: @white;
          border-width: 4px;
          margin-left: 0px;
        }
      }
    }
    a {
      color: @gray6;
    }
  }
  table.items {
    background-color: @searchBodyBackground;
    width: 100%;

    th {
      padding-top: 30px;
    }

    tfoot {
      tr {
        border-top: 1px solid @gray3;
      }
      td.load-more-results {
        padding: 12px 25px;
        text-align: center;

        a {
          cursor: pointer;
          display: block;
          &:before {
            content: 'p ';
            font-family: "balanced-icon";
            font-size: 20px;
            vertical-align: middle;
          }
        }
      }
    }
    th {
      float: none;
      padding-left: 0;
      padding-right: 0;
      &:first-child {
        padding-left: 25px;
      }
      &:last-child {
        padding-right: 25px;
        &.sortable {
          padding-right: 5px;
        }
      }
    }
    tbody td, th td {
      float: none;
      &:first-child {
        span {
          padding-left: 25px;
        }
      }
      &:last-child {
        span {
          padding-right: 25px;
          &.sortable {
            padding-right: 5px;
          }
        }
      }
    }
    tbody {
      tr {
        border-top: 1px solid @gray3;
        &:hover {
          cursor: pointer;
          background-color: white;
        }

        td {
          padding: 0;
          &.no-results {
            padding: 12px 15px 12px 25px;
            font-style: italic;
            cursor: default;
          }
          &:last-child {

          }
          a {
            display: block;
            height: 100%;
            width: 100%;
            text-decoration: none;
            span {
              padding: 12px 15px 12px 0;
              display: block;
            }
            &:link, &:visited, &:hover, &:active {
              color: @textColor;
            }
          }
        }
        td.label4a {
          a {
            &:link, &:visited, &:hover, &:active {
              color: @black;
            }
          }
          &.black {
            color: @black;
          }
        }
      }
      td, span {
        white-space: nowrap;
        overflow: hidden;
        text-overflow: ellipsis;
      }
    }
    .highlight {
      background-color: #b3d1d5;
    }
  }
  .date {

  }
  .type {

  }
  .description {

  }
  .account {

  }
  .funding-instrument {

  }
  .amount {

  }
  .num, .align-right {
    text-align: right;
  }
  .null-field {
    font-style:italic;
  }

  .sortable {
    &:hover {
      cursor: pointer;
    }
    &:after {
      display: inline-block;
      content: ' ';
      width: 14px;
      height: 14px;
      background: @iconsFile -18px -218px no-repeat;
      margin-left: 5px;
      vertical-align: top;
    }
    &.ascending {
      &:after {
        background-position: -68px -218px;
      }
    }
    &.descending {
      &:after {
        background-position: -118px -218px;
      }
    }
  }
  .selector {
    background-color: @searchSelectorBackground;
    color: @searchTimingColor;
    &:hover {
      background-color: @searchTimingBackgroundHover;
    }
  }

   .filter-status-rollup {
        margin-right: 15px;
        margin-top: 10px;

        label {
            color: @black;
        }
   }

  .timing {
    &.pull-left {
        float: left;
        border-left: 0px;
        border-right: 1px solid @marketplaceNavColor;
    }
    height: 38px;
    padding: 5px;
    float: right;
    border-left: 1px solid @gray3;
    border-bottom: 0;
    margin: 0;

    &:hover {
      border-bottom: 0;
    }

    &.filter-endpoints {
        .dropdown-menu {
          width: 130px;
        }
    }

    .dropdown-menu {
      //  120px = set timing width
      // 330px = width of date picker
      width: 120px + 330px + @searchBorderWidth * 8;
      right: -@searchBorderWidth;
      padding: 0;

      &.date-picker {
        top: 44px;
      }

      .set-times {
        background-color: @white;
        float: left;
        width: 120px;
        height: 205px;
        padding: 10px;
      }
      .date-picker {
        padding: 10px;
        float: right;
        width: 330px;
      }

      .before, .after {
        position: absolute;
        height: 190px;
        width: 220px;
        padding-top: 10px;

        .datepicker {
          .box-shadow(none);
          background-color: @gray2;
          display: none;
        }
        .dt {
        }
        &.selected {
          .datepicker, .dt {
            background-color: @gray2;
            display: block;
          }
        }
      }
      .go {
        position: absolute;
        top: 172px;
        right: -12px;
        margin: 10px 20px 10px 10px;
      }
      .before {
        float: right;
        .dt {
          top: 50px;
          text-align: right;
        }
      }
      .after {
        float: left;
      }
      //  wrapper around dp
      .dt {
        position: absolute;
        top: 0;
        // 90px + 10px padding * 2
        right: -110px;
        width: 50%;
        padding: 10px;
        width: 90px;
      }
      //  date picker (input box with date in it)
      .dp {
        width: 75px;
        margin: 0;
        border-radius: 0;
        border: 1px solid rgb(197, 197, 197);
        &:focus, &:active {
          outline: none;
          box-shadow: none;
          border-color: #000;
        }
      }
      .datepicker {
        top: 0;
        display: block;
        width: 220px;
        border: 0;
      }
    }
  }
}

.filter-choices {
  background-color: @white;
  padding: 10px 0;
  li {
    font-family: nimbussannov-med;
    font-size: 13px;
    span, a {
      display: block;
      padding: 5px 20px;
      color: @gray5;
    }
    span {
      color: #e2e1ec;
    }
    a {
      &:hover {
        color: @black;
        background: transparent;
        background-image: none;
      }
    }
  }
}

.results.results-framed {
  @baseColor: @gray2;

  background-color: @white;
  border: 1px solid @baseColor;
  margin-bottom: 40px;
  float: none;
  width: auto;

  .header {
    background-color: @baseColor;
    border: 0 solid transparent;
    color: @black;
    float: none;
    font-family: @baseFontFamilyBold;
    font-size: 17px;
    height: 40px;
    line-height: 40px;
    padding: 0 10px;
    width: auto;
  }
}

.results.results-framed.results-error {
  .count {
    background-color: @imperialRed100;
  }
}

.results.results-framed.results-neutral {
  .count {
    background-color: @gray3;
  }
}

